# hw_btihot_tuhna1

./: .gitignore  CMakeLists.txt  README.md  test
src/: main.cpp  main_task1.cpp  service.cpp  service.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
